Closed
Bug 1345897
Opened 9 years ago
Closed 9 years ago
Use a separate error function for sentinel errors
Categories
(Core :: IPC, defect)
Core
IPC
Tracking
()
RESOLVED
FIXED
mozilla55
People
(Reporter: mccr8, Assigned: mccr8)
References
Details
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
kanru
:
review+
gchang
:
approval-mozilla-aurora+
|
Details |
checkedRead uses the same error message for whatever it is checking as it does for the sentinel, which is a little confusing. See bug 1345872. A separate function for all sentinel checking failures is probably ok.
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → continuation
| Assignee | ||
Comment 1•9 years ago
|
||
This patch was much grosser than I'd have liked.
| Comment hidden (mozreview-request) |
Comment 3•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8846110 [details]
Bug 1345897 - Use a separate error function for sentinel errors.
https://reviewboard.mozilla.org/r/119192/#review121430
Attachment #8846110 -
Flags: review?(kchen) → review+
Pushed by amccreight@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c93713825d2e
Use a separate error function for sentinel errors. r=kanru
Comment 5•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
| Assignee | ||
Comment 6•9 years ago
|
||
Comment on attachment 8846110 [details]
Bug 1345897 - Use a separate error function for sentinel errors.
Approval Request Comment
[Feature/Bug causing the regression]: none
[User impact if declined]: No direct impact. This separates out some signatures for diagnostic crashes we have on Aurora and Nightly.
[Is this code covered by automated tests?]: somewhat
[Has the fix been verified in Nightly?]: yes, I confirmed that the new signature shows up.
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: No.
[Why is the change risky/not risky?]: It just adds a new crashing method and calls it instead of another crashing method sometimes.
[String changes made/needed]: none
Attachment #8846110 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 7•9 years ago
|
||
No need to backport this except to Aurora, as we only have sentinels on Nightly and Aurora.
status-firefox52:
--- → wontfix
status-firefox53:
--- → wontfix
status-firefox54:
--- → affected
status-firefox-esr45:
--- → wontfix
status-firefox-esr52:
--- → wontfix
Comment 8•9 years ago
|
||
Comment on attachment 8846110 [details]
Bug 1345897 - Use a separate error function for sentinel errors.
This patch can help for diagnostic crashes on Aurora and Nightly. Aurora54+.
Attachment #8846110 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 9•9 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•