Bug 1345897 - Use a separate error function for sentinel errors. r=kanru a=gchang

Using a separate error function will distinguish mismatched sentinels
from other errors, such as array length problems.

MozReview-Commit-ID: Gl8swNhqLns